# esp32

./: .gitignore  CMakeLists.txt  build.zig  build.zig.zon  sdkconfig.defaults
main/: CMakeLists.txt  WiFi.zig  app.zig  blink.zig  idf_component.yml  log.zig  ring_buffer.zig  temp.zig  temp_sensor.zig  wifi.zig
marvin/: deploy.sh  grafana.service  nftables.conf  notes  sink.service
script/: build.sh
scripts/: build.sh  sync.sh
src/: main.zig  message.zig  ring_buffer.zig  server.zig  sink.zig  state.zig
